2009-08-28  Neil Horman <nhorman@tuxdriver.com>

	* src/scanner.h: Added a LEXERR token to be returned if a lexer error
	occurs

	* src/crossref.c: Check for LEXERR token, and abort processing file if
	lexer error occurs

	* src/fcanner.l: check the statue of my_yytext on = and : symbols.  If
	its NULL consider that a lexer error.  This can occur if input files are
	provided that contain only a '=' or ':' symbol.  Without the ability to
	detect and return a lexer error, we get a segfault.

2009-05-06  Neil Horman <nhorman@tuxdriver.com>

	* src/main.c: Fixed string length checks to avoid overflow

2009-04-30  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/version.h (FILEVERSION, FIXVERSION): Version number changed
	to 15.7a.

	* configure.in: Version number changed to 15.7a.

	* configure (all): Regenerated.

2009-04-10  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/snprintf.c: Replacement implementation for missing snprintf
	and vsprintf, from www.jhweiss.de.
	
	* acinclude: New macros to optionally activate a replacement for
	missing snprintf and vsprintf, from www.jhweiss.de.

	* configure.in: Call new macros for snprintf and vsprintf.  Drop
	AC_FUNC_LSTAT in turn, since it would have required a replacement
	implementation for lstat().

	* src/Makefile.am (cscope_LDADD): Added LIBOBJS to automatically
	include snprintf.o in the build if and only if needed.

	* configure, config.h.in, aclocal.m4, Makefile.in,
	contrib/Makefile.in, doc/Makefile.in, src/Makefile.in:
	Regenerated.

	* src/global.h: Add prototypes for replacement snprintf and
	vsnprintf.
	
	* src/*.c: Replace all calls of sprintf by snprintf to avoid
	possible buffer overflows.

2008-06-30  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* aclocal.m4, configure, config.h.in, Makefile.in,
	src/Makefile.in, doc/Makefile.in, contrib/Makefile.in: Regenerated
	by recent autotools.

	* compile, config.guess, config.sub, depcomp, install-sh, missing,